# Chip8-emulator

./: CMakeLists.txt  README.md
src/: Chip8.cpp  Chip8.hpp  Platform.cpp  Platform.hpp  chip8.cpp  chip8.hpp  main.cpp
